force-app/main/default/objects/Invoice_Line__c/fields/English_Description__c.field-meta.xml
<CustomField>
    <fullName>English_Description__c</fullName>
    <label>English Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>