force-app/main/default/objects/Invoice_Line__c/fields/French_Description__c.field-meta.xml
<CustomField>
    <fullName>French_Description__c</fullName>
    <label>French Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>