force-app/main/default/objects/Invoice_Line__c/fields/Language_Preference__c.field-meta.xml
<CustomField>
    <fullName>Language_Preference__c</fullName>
    <formula>Invoice__r.Language_Preference__c</formula>
    <label>Language Preference</label>
    <type>Text</type>
</CustomField>