force-app/main/default/objects/Invoice_Line__c/fields/Line_Nunber__c.field-meta.xml
<CustomField>
    <fullName>Line_Nunber__c</fullName>
    <label>Line Nunber</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>