force-app/main/default/objects/Invoice_Line__c/fields/Misc_Charge__c.field-meta.xml
<CustomField>
    <fullName>Misc_Charge__c</fullName>
    <label>Misc Charge</label>
    <length>255</length>
    <type>Text</type>
</CustomField>