force-app/main/default/objects/Invoice_Line__c/fields/Tax_P__c.field-meta.xml
<CustomField>
    <fullName>Tax_P__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tax (P)</label>
    <type>Checkbox</type>
</CustomField>