force-app/main/default/objects/Invoice_Line__c/fields/Unit_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Unit_Conversion__c</fullName>
    <label>Unit Conversion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>